--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,37 +4,37 @@
 	font-family: 'Alegreya';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Alegreya'), local('Alegreya-Regular'), url(../fonts/Alegreya/Alegreya-Regular.woff) format('woff');
+	src: local('Alegreya'), local('Alegreya-Regular'), url(../fonts/Alegreya/Alegreya-Regular.woff) format('woff'), url(../fonts/Alegreya/Alegreya-Regular.ttf) format('truetype');
 }
 @font-face {
 	font-family: 'Alegreya';
 	font-style: normal;
 	font-weight: 700;
-	src: local('Alegreya Bold'), local('Alegreya-Bold'), url(../fonts/Alegreya/Alegreya-Bold.woff) format('woff');
+	src: local('Alegreya Bold'), local('Alegreya-Bold'), url(../fonts/Alegreya/Alegreya-Bold.woff) format('woff'), url(../fonts/Alegreya/Alegreya-Bold.ttf) format('truetype');
 }
 @font-face {
 	font-family: 'Alegreya';
 	font-style: normal;
 	font-weight: 900;
-	src: local('Alegreya Black'), local('Alegreya-Black'), url(../fonts/Alegreya/Alegreya-Black.woff) format('woff');
+	src: local('Alegreya Black'), local('Alegreya-Black'), url(../fonts/Alegreya/Alegreya-Black.woff) format('woff'), url(../fonts/Alegreya/Alegreya-Black.ttf) format('truetype');
 }
 @font-face {
 	font-family: 'Alegreya';
 	font-style: italic;
 	font-weight: 400;
-	src: local('Alegreya Italic'), local('Alegreya-Italic'), url(../fonts/Alegreya/Alegreya-Italic.woff) format('woff');
+	src: local('Alegreya Italic'), local('Alegreya-Italic'), url(../fonts/Alegreya/Alegreya-Italic.woff) format('woff'), url(../fonts/Alegreya/Alegreya-Italic.ttf) format('truetype');
 }
 @font-face {
 	font-family: 'Alegreya';
 	font-style: italic;
 	font-weight: 700;
-	src: local('Alegreya Bold Italic'), local('Alegreya-BoldItalic'), url(../fonts/Alegreya/Alegreya-BoldItalic.woff) format('woff');
+	src: local('Alegreya Bold Italic'), local('Alegreya-BoldItalic'), url(../fonts/Alegreya/Alegreya-BoldItalic.woff) format('woff'), url(../fonts/Alegreya/Alegreya-BoldItalic.ttf) format('truetype');
 }
 @font-face {
 	font-family: 'Alegreya';
 	font-style: italic;
 	font-weight: 900;
-	src: local('Alegreya Black Italic'), local('Alegreya-BlackItalic'), url(../fonts/Alegreya/Alegreya-BlackItalic.woff) format('woff');
+	src: local('Alegreya Black Italic'), local('Alegreya-BlackItalic'), url(../fonts/Alegreya/Alegreya-BlackItalic.woff) format('woff'), url(../fonts/Alegreya/Alegreya-BlackItalic.ttf) format('truetype');
 }
 
 * {
