--- a/templates/default.html
+++ b/templates/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>dsferruzza$if(title)$ - $title$$endif$</title>
+	<title>dsferruzza - $title$</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
