--- a/templates/default.html
+++ b/templates/default.html
@@ -13,9 +13,9 @@
 		<nav class="navbar navbar-default" role="navigation">
 			<a class="navbar-brand" href="/">dsferruzza</a>
 			<ul class="nav navbar-nav">
-				<li><a href="/">Home</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">CV</a></li>
+				<li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+				<li><a href="#"><span class="glyphicon glyphicon-bullhorn"></span> Blog</a></li>
+				<li><a href="#"><span class="glyphicon glyphicon-book"></span> CV</a></li>
 			</ul>
 		</nav>
 	</header>
