--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 <article>
 	<header>
 		<h1>$title$</h1>
-		<p>$author$ - $date$</p>
+		<p><span class="glyphicon glyphicon-user"></span> $author$ - <span class="glyphicon glyphicon-time"></span> $date$</p>
 	</header>
 	<section>
 		$body$
