Add language metadata

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,10 @@
 <article>
 	<header>
 		<h1>$title$</h1>
-		<p><span class="glyphicon glyphicon-user"></span> $author$ - <span class="glyphicon glyphicon-time"></span> $date$</p>
+		<p>
+			<span class="glyphicon glyphicon-user"></span> $author$ - <span class="glyphicon glyphicon-time"></span> $date$
+			<br><span class="glyphicon glyphicon-globe"></span> $lang$ - <span class="glyphicon glyphicon-tags"></span>
+		</p>
 	</header>
 	<section>
 		$body$
