--- a/templates/postList.html
+++ b/templates/postList.html
@@ -1,5 +1,5 @@
 <ul>
 	$for(posts)$
-	<li><a href="$url$">$title$</a> - <em>$date$</em> - by <em>$author$</em></li>
+	<li><a href="$url$">[$lang$] $title$</a> - <em>$date$</em> - by <em>$author$</em></li>
 	$endfor$
 </ul>
