--- a/templates/post.html
+++ b/templates/post.html
@@ -3,7 +3,7 @@
 		<h1>$title$</h1>
 		<p>
 			<span class="glyphicon glyphicon-user"></span> $author$ - <span class="glyphicon glyphicon-time"></span> $date$
-			<br><span class="glyphicon glyphicon-globe"></span> $lang$ - <span class="glyphicon glyphicon-tags"></span>
+			<br><span class="glyphicon glyphicon-globe"></span> $lang$ - <span class="glyphicon glyphicon-tags"></span> $prettytags$
 		</p>
 	</header>
 	<section>
