--- a/templates/postList.html
+++ b/templates/postList.html
@@ -1,5 +1,4 @@
+<h1>$title$</h1>
 <ul>
-	$for(posts)$
-	<li><a href="$url$">[$lang$] $title$</a> - <em>$date$</em> - by <em>$author$</em></li>
-	$endfor$
+	$posts$
 </ul>
