Disable a link for now

--- a/templates/default.html
+++ b/templates/default.html
@@ -15,7 +15,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
 				<li><a href="/archive.html"><span class="glyphicon glyphicon-bullhorn"></span> Blog</a></li>
-				<li><a href="#"><span class="glyphicon glyphicon-book"></span> CV</a></li>
+				<!--<li><a href="#"><span class="glyphicon glyphicon-book"></span> CV</a></li>-->
 			</ul>
 		</nav>
 	</header>
