--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,6 +53,13 @@
 	font-size: 14px;
 }
 
+.feed-icon {
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+	background: url(../img/feed.png) no-repeat 0 50%;
+}
+
 
 /* HEADER */
 
