--- a/templates/default.html
+++ b/templates/default.html
@@ -4,6 +4,7 @@
 	<title>$title$ - dsferruzza</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="alternate" type="application/atom+xml" title="David Sferruzza's blog" href="/atom.xml">
 
 	<link rel="stylesheet" href="/assets/css/bootstrap.css">
 	<link rel="stylesheet" href="/assets/css/main.css">
@@ -15,6 +16,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
 				<li><a href="/archive.html"><span class="glyphicon glyphicon-bullhorn"></span> Blog</a></li>
+				<li><a href="/atom.xml"><span class="feed-icon"></span> Feed</a></li>
 				<!--<li><a href="#"><span class="glyphicon glyphicon-book"></span> CV</a></li>-->
 			</ul>
 		</nav>
