Handle update date

--- a/templates/post.html
+++ b/templates/post.html
@@ -2,7 +2,7 @@
 	<header>
 		<h1>$title$</h1>
 		<p>
-			<span class="glyphicon glyphicon-user"></span> $author$ - <span class="glyphicon glyphicon-time"></span> $date$
+			<span class="glyphicon glyphicon-user"></span> $author$ - <span class="glyphicon glyphicon-time"></span> $date$ $if(updated)$<em>(last update: $updated$)</em>$endif$
 			<br><span class="glyphicon glyphicon-globe"></span> $lang$ - <span class="glyphicon glyphicon-tags"></span> $prettytags$
 		</p>
 	</header>
