--- a/templates/postListItem.html
+++ b/templates/postListItem.html
@@ -1,3 +1,3 @@
 <li>
-	<a href="$url$">[$lang$] $title$</a> - <em>$date$</em> - by <em>$author$</em>
+	<a href="$url$">[$lang$] $title$</a> - <em><time datetime="$date.iso8601$">$date$</time></em> - by <em>$author$</em>
 </li>
