--- a/templates/default.html
+++ b/templates/default.html
@@ -33,7 +33,9 @@
 	$endif$
 
 	<footer>
-		
+		<p>Generated with <a href="http://jaspervdj.be/hakyll/">Hakyll</a> - <a href="https://github.com/dsferruzza/david.sferruzza.fr">Source code</a></p>
+		<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/assets/img/creativecommons-by-4.0-88x31.png"></a>
+		<br>Unless specified otherwise, my work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 	</footer>
 
 	<!-- Piwik -->
