--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,3 +94,19 @@ body > section h1 {
 body > section header {
 	margin-bottom: 30px;
 }
+
+/* FOOTER */
+
+body > footer {
+	margin-top: 50px;
+	padding-top: 30px;
+	border-top: 1px solid #E7E7E7;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	text-align: center;
+	font-style: italic;
+}
+
+body > footer, body > footer a, body > footer p {
+	font-size: 15px;
+}
