Add post's description in lists

--- a/templates/postListItem.html
+++ b/templates/postListItem.html
@@ -1,3 +1,4 @@
 <li>
 	<a href="$url$">[$lang$] $title$</a> - <em><time datetime="$date.iso8601$">$date$</time></em> - by <em>$author$</em>
+	<br><small>$description$</small>
 </li>
