--- a/templates/default.html
+++ b/templates/default.html
@@ -8,6 +8,7 @@
 
 	<link rel="stylesheet" href="/assets/css/bootstrap.css">
 	<link rel="stylesheet" href="/assets/css/main.css">
+	<link rel="stylesheet" href="/assets/css/syntax.css">
 </head>
 <body class="container">
 	<header>
