Add Flattr button

--- a/templates/post.html
+++ b/templates/post.html
@@ -7,6 +7,7 @@
 			$if(updated)$<em>(last update: <time itemprop="dateModified" datetime="$updated.iso8601$">$updated$</time>)</em>$endif$
 			<br><span class="glyphicon glyphicon-globe"></span> <span itemprop="inLanguage">$lang$</span> - 
 			<span class="glyphicon glyphicon-tags"></span> <span itemprop="keywords">$prettytags$</span>
+			<br><a href="https://flattr.com/submit/auto?user_id=dsferruzza&amp;url=http://david.sferruzza.fr$url$&amp;title=$title$&amp;description=$description$&amp;language=$lang$&amp;tags=$tags$&amp;category=text"><img src="/assets/img/flattr-badge-large.png" alt="Flattr this!"></a>
 		</p>
 	</header>
 	<div itemprop="articleBody">$body$</div>
